se agrego modificacion en el trabajo Reto -landing, lo que tiene que ver con informacion-secundaria , informacion-terciaria

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  
   
   <title>Reto landing</title>
 
@@ -46,17 +47,37 @@
 
   1.4k+
   Communities Formed
-
+ 
   2.7m+
   Messages Sent
 
-  Grow Together
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
 
-  Flowing Conversations
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
-  just-in-time loading for a more natural flow.
+  <section id="informacion-secundaria"> 
+    <img src="./assets/images/bg-section-top-mobile-1.svg">
+    <article>
+      <div>
+        <img src="./assets/images/illustration-grow-together.svg" alt="Grow Together">
+      </div>
+      <h2>Grow Together</h2>
+      <p>
+        Generate meaningful discussions with your audience and build a strong, loyal community. 
+        Think of the insightful conversations you miss out on with a feedback form. 
+      </p>
+    </article>
+    <img src="./assets/images/bg-section-bottom-mobile-1.svg">
+  </section>
+
+
+  <section id="informacion-terciaria">
+      <div>
+        <img src="./assets/images/illustration-flowing-conversation.svg">
+      </div>
+      <h2>Flowing Conversations</h2>
+      <p>
+        You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
+        just-in-time loading for a more natural flow. 
+      </p>
+  </section>
 
   Your Users
   It takes no time at all to integrate Huddle with your app's authentication solution. This means, 
